--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.3.1",
     "helmet": "^5.0.2",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7"
   }
