--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "validator": "^13.7.0"
   }
 }
