--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "server": "nodemon app.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
-
   },
   "proxy": "http://localhost:5000",
   "author": "Leksyking",
@@ -30,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "mongoose-findorcreate": "^3.0.0",
+    "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "validator": "^13.7.0"
