--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,10 @@
 {
   "name": "photoweb",
   "version": "1.0.0",
-  "description": "an API for a photography website ",
+  "description": "An API for a photography website ",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "server": "nodemon app.js",
+    "server": "node app.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
